--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,64 @@
-/* Acá va tu código */
+/* PALETA DE COLORES ------------------
+Black Leather Jacket: #253031
+Dark Slate Gray: #315659
+Lapis Lazuli: #2978a0
+Ruby Red: #a31621
+Isabelline: #f6f7eb
+*/
+
+/* GOOGLE FONTS --------------------------
+<link href="https://fonts.googleapis.com/css?family=Cinzel|Merriweather|Nunito&display=swap" rel="stylesheet"> 
+    font-family: 'Merriweather', serif; //body base
+    font-family: 'Nunito', sans-serif; // botones
+    font-family: 'Cinzel', serif; // títulos
+*/
+
+ul{
+    list-style: none;
+    text-decoration: none;
+    color: #f6f7eb;
+}
+
+label{
+    margin-right: -40%;
+    display: block;
+    font-family: 'Cinzel', serif;
+    text-align: center;
+    font-size: 1.3em;
+
+}
+
+body{
+    font-family: 'Merriweather', serif;
+    background-color: #315659;
+}
+.navega{
+    width: 100%;
+    height: 3em;
+    margin-bottom: 4%;
+}
+.navega ul{
+    height: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #2978a0;
+    font-family: 'Cinzel', serif;
+    color: #f6f7eb;
+    font-weight: bold;
+}
+.navega li{
+    justify-items: space-around;
+}
+
+.frames{
+    display: block;
+    text-align: center;
+    width: 80%;
+    height: 30%;
+    color: #f6f7eb;
+    background-color: #253031;
+    padding: 2%;
+    margin: 1% auto;
+
+}
