--- a/src/style.css
+++ b/src/style.css
@@ -20,11 +20,11 @@ ul {
 }
 
 label {
-  margin-right: -40%;
-  display: block;
+  text-align: center;
   font-family: 'Cinzel', serif;
   text-align: center;
-  font-size: 1.3em;
+  font-size: 1em;
+  margin: 2%;
 
 }
 
@@ -39,26 +39,6 @@ body {
   background-color: #315659;
 }
 
-.navega {
-  width: 100%;
-  height: 3em;
-  margin-bottom: 4%;
-}
-
-.navega ul {
-  height: 3em;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  background-color: #2978a0;
-  font-family: 'Cinzel', serif;
-  color: #f6f7eb;
-  font-weight: bold;
-}
-
-.navega li {
-  justify-items: space-around;
-}
 
 button {
   display: block;
@@ -70,7 +50,7 @@ button {
   margin: 1% auto;
   text-align: center;
   width: 20%;
-  cursor : pointer;
+  cursor: pointer;
 
 }
 
@@ -94,7 +74,8 @@ input[type='number'] {
   margin: 0 auto;
 
 }
-#root{
+
+#root {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -102,7 +83,7 @@ input[type='number'] {
   justify-content: center;
 }
 
-#logo{
+#logo {
   max-width: 70%;
   align-self: center;
   display: flex;
@@ -117,11 +98,12 @@ input[type='number'] {
   }
 
   label {
-    
-    display: block;
+
     font-family: 'Cinzel', serif;
     text-align: center;
-    font-size: 1.3em;
+    font-size: 1 em;
+    margin: 2%;
+
 
   }
 
